# ModuleMixins.jl

./: .all-contributorsrc  .brei_history  .copier-answers.yml  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Project.toml  README.md  entangled.toml  lychee.toml  pyproject.toml
.entangled/: filedb.json  tasks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 10-bug-report.yml  20-feature-request.yml  30-usage.yml  99-general.yml  config.yml
.github/workflows/: Docs.yml  ReusableTest.yml  Test.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/10-introduction/: index.html
dev/20-example/: index.html
dev/30-blog/: index.html
dev/40-studies/: index.html
dev/45-passes/: index.html
dev/50-implementation/: index.html
dev/90-contributing/: index.html
dev/91-developer/: index.html
dev/95-reference/: index.html
docs/: Project.toml  make.jl
docs/src/: 10-introduction.md  20-example.md  30-blog.md  40-studies.md  45-passes.md  50-implementation.md  90-contributing.md  91-developer.md  95-reference.md  index.md
examples/: just_a_spring.jl  mixin_a_spring.jl  spring-benchmark.jl  spring.jl  spring_with_mm.jl  spring_without_mm.jl
src/: Constructors.jl  Lambda.jl  Mixins.jl  ModuleMixins.jl  ModuleMixins.jl.jl  Passes.jl  Spec.jl  Structs.jl  Templates.jl
test/: ComposeSpec.jl  ConstructorsSpec.jl  MixinsSpec.jl  PassesSpec.jl  Project.toml  SpecSpec.jl  StructsSpec.jl  TemplatesSpec.jl  runtests.jl
