[tool.poetry]
name = "module-mixins"
version = "0.1.0"
description = "Dev environment for ModuleMixins.jl"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
copier = "^9.3.1"
entangled-cli = {git = "https://github.com/entangled/entangled.py"} 
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.brei]
include = [".entangled/tasks.json"]

[tool.brei.runner.julia]
command = "julia"
args = ["--project=docs", "${script}"]

