[project]
name = "module-mixins"
version = "0.1.0"
description = "Dev environment for ModuleMixins.jl"
authors = [{ name = "Johan Hidding", email = "j.hidding@esciencecenter.nl" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "copier>=9.3.1,<10",
    "entangled-cli",
    "pre-commit>=3.8.0,<4",
]

[tool.uv]

[tool.uv.sources]
entangled-cli = { git = "https://github.com/entangled/entangled.py" }

[tool.brei]
include = [".entangled/tasks.json"]

[tool.brei.runner.julia]
command = "julia"
args = ["--project=docs", "${script}"]

