[project]
name = "module-mixins"
version = "0.1.0"
description = "Dev environment for ModuleMixins.jl"
authors = [{ name = "Johan Hidding", email = "j.hidding@esciencecenter.nl" }]
requires-python = "~=3.14.0"
readme = "README.md"
dependencies = [
    "entangled-cli"
]

[tool.brei]
include = [".entangled/tasks.json"]

[tool.brei.runner.julia]
command = "julia"
args = ["--project=docs", "${script}"]
